# anya

./: .bazelrc  .gitignore  AGENTS.md  ANYA_PUBLISHING.md  MODULE.bazel  README-ANYA.md  README.md  bun.lockb  defs.bzl  env.sample  exp.ts  index.ts  justfile  package-lock.json  package.json  usage.ts
bazel/modules/: BUILD.bazel  wine.MODULE.bazel
codex-rs/: Cargo.toml  README.md  deny.toml  rust-toolchain.toml
codex-rs/.cargo/: audit.toml  config.toml
codex-rs/.config/: nextest.toml
codex-rs/.github/workflows/: cargo-audit.yml
codex-rs/agent-graph-store/: Cargo.toml
codex-rs/agent-graph-store/src/: local.rs  store.rs
codex-rs/analytics/: Cargo.toml
codex-rs/analytics/src/: analytics_client_tests.rs  client.rs  client_tests.rs  events.rs  facts.rs  lib.rs  reducer.rs
codex-rs/anya/: Cargo.toml
codex-rs/anya/src/: anya_config.rs  channel.rs  codex_rpc.rs  gog.rs  home.rs  main.rs  service.rs  setup.rs  system_events.rs  update.rs  whatsapp.rs
codex-rs/app-server/: Cargo.toml  README.md
codex-rs/app-server-client/src/: lib.rs  path.rs  remote.rs
codex-rs/app-server-daemon/src/: client.rs  lib.rs  remote_control_client.rs
codex-rs/app-server-protocol/src/: export.rs  lib.rs  schema_fixtures.rs
codex-rs/app-server-test-client/src/: lib.rs
codex-rs/app-server-transport/src/: lib.rs
codex-rs/app-server/src/: attestation.rs  bespoke_event_handling.rs  command_exec.rs  config_manager.rs  config_manager_service.rs  config_manager_service_tests.rs  connection_cleanup.rs  connection_rpc_gate.rs  extensions.rs  fs_watch.rs  in_process.rs  lib.rs  main.rs  main_tests.rs  mcp_refresh.rs  message_processor.rs  message_processor_tracing_tests.rs  models.rs  outgoing_message.rs  request_processors.rs  request_serialization.rs  skills_watcher.rs  thread_state.rs  thread_status.rs  transport.rs  transport_tests.rs
codex-rs/apply-patch/: BUILD.bazel  Cargo.toml
codex-rs/apply-patch/src/: invocation.rs  lib.rs  parser.rs  streaming_parser.rs
codex-rs/arg0/: Cargo.toml
codex-rs/arg0/src/: lib.rs
codex-rs/async-utils/: Cargo.toml
codex-rs/async-utils/src/: lib.rs
codex-rs/backend-client/src/: client.rs  lib.rs  types.rs
codex-rs/benchmarks/app-server-start/: BUILD.bazel  Cargo.toml
codex-rs/chatgpt/src/: connectors.rs  workspace_settings.rs
codex-rs/cli/: BUILD.bazel  Cargo.toml
codex-rs/cli/src/: debug_sandbox.rs  doctor.rs  lib.rs  login.rs  main.rs  marketplace_cmd.rs  mcp_cmd.rs  plugin_cmd.rs  remote_control_cmd.rs  sandbox_setup.rs  state_db_recovery.rs
codex-rs/cli/tests/: debug_clear_memories.rs  delete.rs  exec_server.rs  login.rs  marketplace_add.rs  marketplace_remove.rs  marketplace_upgrade.rs  mcp_add_remove.rs  plugin_cli.rs  sandbox_network_proxy.rs
codex-rs/cloud-config/: BUILD.bazel  Cargo.toml
codex-rs/cloud-config/src/: backend.rs  bundle_loader.rs  cache.rs  cache_tests.rs  lib.rs  metrics.rs  service.rs  service_tests.rs  validation.rs
codex-rs/cloud-requirements/: Cargo.toml
codex-rs/cloud-requirements/src/: lib.rs
codex-rs/cloud-tasks/: Cargo.toml
codex-rs/cloud-tasks-client/: Cargo.toml
codex-rs/cloud-tasks-client/src/: api.rs  http.rs  lib.rs
codex-rs/cloud-tasks-mock-client/: Cargo.toml
codex-rs/cloud-tasks-mock-client/src/: mock.rs
codex-rs/cloud-tasks/src/: app.rs  lib.rs  util.rs
codex-rs/code-mode/: Cargo.toml
codex-rs/code-mode-host/: BUILD.bazel  Cargo.toml
codex-rs/code-mode-protocol/: BUILD.bazel  Cargo.toml
codex-rs/code-mode-protocol/src/: description.rs  lib.rs  response.rs  runtime.rs  session.rs  session_tests.rs
codex-rs/code-mode/src/: description.rs  lib.rs  service.rs
codex-rs/codex-api/: Cargo.toml
codex-rs/codex-api/src/: api_bridge.rs  api_bridge_tests.rs  auth.rs  common.rs  images.rs  lib.rs  rate_limits.rs  search.rs
codex-rs/codex-api/tests/: clients.rs  models_integration.rs  sse_end_to_end.rs
codex-rs/codex-client/: Cargo.toml
codex-rs/codex-client/src/: custom_ca.rs  transport.rs
codex-rs/codex-home/: BUILD.bazel  Cargo.toml
codex-rs/codex-home/src/: lib.rs
codex-rs/codex-mcp/: Cargo.toml
codex-rs/codex-mcp/src/: catalog.rs  catalog_tests.rs  codex_apps.rs  connection_manager.rs  connection_manager_tests.rs  lib.rs  plugin_config.rs  plugin_config_tests.rs  resource_client.rs  rmcp_client.rs  runtime.rs  tools.rs
codex-rs/config/: Cargo.toml
codex-rs/context-fragments/: BUILD.bazel  Cargo.toml
codex-rs/core/: BUILD.bazel  Cargo.toml  README.md  config.schema.json
codex-rs/core-api/: Cargo.toml
codex-rs/core-plugins/: Cargo.toml
codex-rs/core-skills/: Cargo.toml
codex-rs/docs/: bazel.md  codex_mcp_interface.md  protocol_v1.md
codex-rs/exec/: Cargo.toml
codex-rs/exec-server/: Cargo.toml  README.md
codex-rs/file-system/: Cargo.toml
codex-rs/git-utils/: Cargo.toml
codex-rs/install-context/: Cargo.toml
codex-rs/linux-sandbox/: Cargo.toml  README.md
codex-rs/login/: Cargo.toml
codex-rs/mcp-server/: Cargo.toml
codex-rs/memories/: README.md
codex-rs/message-history/: Cargo.toml
codex-rs/model-provider/: Cargo.toml
codex-rs/models-manager/: Cargo.toml
codex-rs/network-proxy/: Cargo.toml  README.md
codex-rs/ollama/: Cargo.toml
codex-rs/plugin/: Cargo.toml
codex-rs/process-hardening/: README.md
codex-rs/prompts/: BUILD.bazel  Cargo.toml
codex-rs/protocol/: Cargo.toml
codex-rs/rmcp-client/: Cargo.toml
codex-rs/rollout/: Cargo.toml
codex-rs/rollout-trace/: README.md
codex-rs/sandboxing/: Cargo.toml
codex-rs/scripts/: setup-windows.ps1
codex-rs/shell-command/: Cargo.toml
codex-rs/shell-escalation/: Cargo.toml
codex-rs/state/: BUILD.bazel
codex-rs/thread-store/: Cargo.toml
codex-rs/tools/: Cargo.toml  README.md
codex-rs/tui/: Cargo.toml  prompt_for_init_command.md
codex-rs/windows-sandbox-rs/: BUILD.bazel  Cargo.toml  build.rs
patches/: BUILD.bazel  llvm_rusty_v8_custom_libcxx.patch  llvm_windows_arm64_powl.patch  rules_cc_rusty_v8_custom_libcxx.patch  rules_rs_build_script_deps_annotation.patch  v8_bazel_rules.patch  v8_module_deps.patch  v8_source_portability.patch
(+1875 files in other folders)
