exports_files([
    "abseil_windows_gnullvm_thread_identity.patch",
    "aws-lc-sys_memcmp_check.patch",
    "aws-lc-sys_windows_msvc_prebuilt_nasm.patch",
    "aws-lc-sys_windows_msvc_memcmp_probe.patch",
    "bzip2_windows_stack_args.patch",
    "llvm_rusty_v8_custom_libcxx.patch",
    "llvm_windows_symlink_extract.patch",
    "rules_rust_windows_bootstrap_process_wrapper_linker.patch",
    "rules_rust_windows_build_script_runner_paths.patch",
    "rules_rust_windows_exec_bin_target.patch",
    "rules_rust_windows_exec_std.patch",
    "rules_rust_windows_process_wrapper_skip_temp_outputs.patch",
    "rules_rust_windows_msvc_direct_link_args.patch",
    "rules_rust_windows_gnullvm_build_script.patch",
    "rules_cc_rusty_v8_custom_libcxx.patch",
    "rules_rs_windows_gnullvm_exec.patch",
    "rules_rs_windows_exec_linker.patch",
    "rusty_v8_prebuilt_out_dir.patch",
    "ring_windows_msvc_include_dirs.patch",
    "v8_bazel_rules.patch",
    "v8_module_deps.patch",
    "v8_source_portability.patch",
    "webrtc-sys_hermetic_darwin_sysroot.patch",
    "windows-link.patch",
    "xz_windows_stack_args.patch",
    "zstd-sys_windows_msvc_include_dirs.patch",
])
