[package]
name = "anya"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Minimal service and channel CLI for running Codex as Anya."

[[bin]]
name = "anya"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
codex-app-server = { workspace = true }
codex-app-server-protocol = { workspace = true }
codex-arg0 = { workspace = true }
codex-config = { workspace = true }
codex-protocol = { workspace = true }
codex-tui = { workspace = true }
codex-utils-cli = { workspace = true }
dirs = { workspace = true }
futures = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
supports-color = { workspace = true }
tokio = { workspace = true, features = ["macros", "process", "rt-multi-thread", "fs", "io-util"] }
tokio-tungstenite = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
